--- a/index.html
+++ b/index.html
@@ -7,103 +7,108 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        body { background-color: #1a1a1a; color: #e5e7eb; }
-        .glass { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.05); }
-        .gradient-blue { background: linear-gradient(135deg, #3b82f6 0%, #1d4ed8 100%); }
-        .img-container { position: relative; overflow: hidden; border-radius: 1.5rem; border: 1px solid rgba(255, 255, 255, 0.1); transition: all 0.3s ease; }
-        .img-container:hover { transform: translateY(-5px); border-color: #3b82f6; }
+        /* Fundo Preto Profundo conforme solicitado */
+        body { background-color: #0d0d0d; color: #e5e7eb; }
+        .glass { background: rgba(255, 255, 255, 0.02); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.05); }
+        .gradient-blue { background: linear-gradient(135deg, #2563eb 0%, #1e40af 100%); }
+        .img-card { border-radius: 1.5rem; border: 1px solid rgba(255, 255, 255, 0.08); overflow: hidden; background: #141414; }
+        .feature-title { font-family: 'Arial Black', sans-serif; font-style: italic; text-transform: uppercase; letter-spacing: -0.05em; }
     </style>
 </head>
 <body class="font-sans antialiased">
 
     <nav class="fixed w-full z-50 glass">
-        <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-            <div class="flex items-center gap-3">
-                <img src="logo.png" alt="Help Tec" class="w-10 h-10 object-contain">
-                <span class="font-black text-xl tracking-tighter uppercase text-white">Help <span class="text-blue-500">Tec</span></span>
+        <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+            <div class="flex items-center gap-2">
+                <img src="logo.png" alt="Help Tec" class="w-8 h-8 object-contain">
+                <span class="font-black text-lg tracking-tighter uppercase text-white leading-none">Help <span class="text-blue-600">Tec</span></span>
             </div>
-            <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="gradient-blue text-white px-6 py-2 rounded-full font-bold text-sm shadow-lg shadow-blue-500/20">OBTER AGORA</a>
+            <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="gradient-blue text-white px-5 py-2 rounded-full font-bold text-xs uppercase tracking-tighter shadow-lg">Comprar</a>
         </div>
     </nav>
 
-    <section class="pt-32 pb-20 px-6 text-center">
+    <section class="pt-32 pb-16 px-6 text-center">
         <div class="max-w-4xl mx-auto">
-            <h1 class="text-5xl md:text-7xl font-black mb-6 leading-tight text-white italic">GESTÃO DE ATIVOS <br><span class="text-blue-500 tracking-normal">SEM COMPLICAÇÕES</span></h1>
-            <p class="text-slate-400 text-lg md:text-xl mb-10 max-w-2xl mx-auto">
-                Transforme a organização da sua instituição com a solução definitiva em rastreabilidade, auditoria e controle patrimonial.
-            </p>
+            <h1 class="text-4xl md:text-7xl font-black mb-6 leading-tight text-white feature-title">PATRIMÔNIO <br><span class="text-blue-600">EFICIENTE</span></h1>
             
-            <div class="inline-flex flex-col items-center glass p-8 rounded-[2rem] border-blue-500/20 mb-12">
-                <span class="text-slate-500 text-sm font-bold uppercase tracking-widest mb-2">Licença Vitalícia</span>
-                <div class="flex items-baseline gap-2">
-                    <span class="text-5xl md:text-7xl font-black text-white leading-none">R$ 149,90</span>
+            <div class="inline-block glass p-6 md:p-10 rounded-[2.5rem] border-blue-600/20 mb-10">
+                <p class="text-slate-500 text-[10px] md:text-xs font-bold uppercase tracking-[0.3em] mb-3">Licença Vitalícia - Versão 1.0</p>
+                <div class="flex flex-col items-center">
+                    <span class="text-5xl md:text-8xl font-black text-white leading-none tracking-tighter">R$ 149,90</span>
+                    <span class="text-blue-500 font-bold mt-3 text-sm md:text-xl italic">Até 5x no cartão de crédito</span>
                 </div>
-                <span class="text-blue-400 font-bold mt-2">Parcele em até 5x no cartão</span>
+            </div>
+
+            <div class="flex justify-center">
+                <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="bg-white text-black px-10 py-5 rounded-2xl font-black text-lg hover:bg-blue-600 hover:text-white transition-all shadow-2xl flex items-center gap-3">
+                    <i class="fas fa-shopping-cart"></i> ADQUIRIR AGORA
+                </a>
             </div>
         </div>
     </section>
 
-    <section class="max-w-7xl mx-auto px-6 py-10 space-y-32">
+    <section class="max-w-5xl mx-auto px-6 py-10 space-y-20 md:space-y-32">
         
-        <div class="flex flex-col md:flex-row items-center gap-16">
-            <div class="md:w-3/5 img-container">
-                <img src="painel.png" alt="Dashboard Principal" class="w-full">
+        <div class="flex flex-col gap-6">
+            <div class="img-card shadow-2xl shadow-black">
+                <img src="painel.png" alt="Dashboard" class="w-full">
             </div>
-            <div class="md:w-2/5 space-y-6">
-                <div class="inline-block p-3 bg-blue-600/10 rounded-2xl text-blue-500 mb-2"><i class="fas fa-layer-group text-2xl"></i></div>
-                <h2 class="text-4xl font-black italic uppercase">Controle <span class="text-blue-500 underline underline-offset-8 decoration-2">Total</span></h2>
-                <p class="text-slate-400 leading-relaxed text-lg">Visualize todo o seu inventário de forma clara. O painel central permite buscas rápidas e filtros por categoria, facilitando auditorias e conferências de bens em tempo real.</p>
-            </div>
-        </div>
-
-        <div class="flex flex-col md:flex-row items-center gap-16">
-            <div class="md:w-2/5 order-2 md:order-1 space-y-6">
-                <div class="inline-block p-3 bg-green-600/10 rounded-2xl text-green-500 mb-2"><i class="fas fa-plus-circle text-2xl"></i></div>
-                <h2 class="text-4xl font-black italic uppercase">Bens <span class="text-green-500 underline underline-offset-8 decoration-2">Novos e Usados</span></h2>
-                <p class="text-slate-400 leading-relaxed text-lg text-justify">Cadastro detalhado para cada tipo de ativo. Registre marcas, modelos, estados de conservação e localização exata. Perfeito para manter o histórico de vida útil dos equipamentos.</p>
-            </div>
-            <div class="md:w-3/5 order-1 md:order-2 grid grid-cols-2 gap-4">
-                <div class="img-container"><img src="TELA PATRIMONIO NOVO .png" alt="Patrimônio Novo"></div>
-                <div class="img-container"><img src="TELA PATRIMONIO USADO.png" alt="Patrimônio Usado"></div>
+            <div class="px-2">
+                <h2 class="text-2xl md:text-4xl font-black feature-title text-blue-500 mb-3">Painel Administrativo</h2>
+                <p class="text-slate-400 text-base md:text-xl leading-relaxed">Centralize toda a gestão. Tenha uma visão clara de cada item do seu estoque com filtros avançados de busca, permitindo localizar qualquer ativo em segundos.</p>
             </div>
         </div>
 
-        <div class="flex flex-col md:flex-row items-center gap-16">
-            <div class="md:w-3/5 grid grid-cols-1 gap-6">
-                <div class="img-container"><img src="ETIQUETA EM LOTE.png" alt="Etiquetas em Lote"></div>
-                <div class="img-container"><img src="etiquetas.png" alt="Gerador QR"></div>
+        <div class="flex flex-col gap-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                <div class="img-card shadow-2xl shadow-black">
+                    <img src="TELA PATRIMONIO NOVO .png" alt="Novo">
+                </div>
+                <div class="img-card shadow-2xl shadow-black">
+                    <img src="TELA PATRIMONIO USADO.png" alt="Usado">
+                </div>
             </div>
-            <div class="md:w-2/5 space-y-6">
-                <div class="inline-block p-3 bg-purple-600/10 rounded-2xl text-purple-500 mb-2"><i class="fas fa-qrcode text-2xl"></i></div>
-                <h2 class="text-4xl font-black italic uppercase text-nowrap">Rastreio <span class="text-purple-500 underline underline-offset-8 decoration-2">Inteligente</span></h2>
-                <p class="text-slate-400 leading-relaxed text-lg">Gere etiquetas com QR Code em lote ou individualmente. Cada item ganha uma identidade digital única que pode ser lida por qualquer smartphone, eliminando erros humanos.</p>
+            <div class="px-2">
+                <h2 class="text-2xl md:text-4xl font-black feature-title text-blue-500 mb-3">Cadastro de Bens</h2>
+                <p class="text-slate-400 text-base md:text-xl leading-relaxed">Diferencie ativos novos de itens já em uso. Registre fotos, números de série, marcas, modelos e o estado atual de conservação para um inventário impecável.</p>
             </div>
         </div>
 
-        <div class="flex flex-col md:flex-row items-center gap-16">
-             <div class="md:w-2/5 space-y-6">
-                <div class="inline-block p-3 bg-red-600/10 rounded-2xl text-red-500 mb-2"><i class="fas fa-user-shield text-2xl"></i></div>
-                <h2 class="text-4xl font-black italic uppercase">Segurança e <span class="text-red-500 underline underline-offset-8 decoration-2">Acesso</span></h2>
-                <p class="text-slate-400 leading-relaxed text-lg text-justify">Controle quem acessa o sistema. Cadastro de novos usuários e ativação via licença garantem que seus dados patrimoniais fiquem protegidos e acessíveis apenas a pessoas autorizadas.</p>
+        <div class="flex flex-col gap-6">
+            <div class="img-card shadow-2xl shadow-black">
+                <img src="ETIQUETA EM LOTE.png" alt="Etiquetas em Lote" class="w-full">
             </div>
-            <div class="md:w-3/5 grid grid-cols-2 gap-4">
-                <div class="img-container"><img src="Ativação.png" alt="Ativação"></div>
-                <div class="img-container"><img src="Cadastro-novo usuario.png" alt="Novo Usuário"></div>
+            <div class="px-2 text-right md:text-left">
+                <h2 class="text-2xl md:text-4xl font-black feature-title text-blue-500 mb-3">Etiquetas e QR Code</h2>
+                <p class="text-slate-400 text-base md:text-xl leading-relaxed">Gere etiquetas inteligentes em lote. Cada patrimônio recebe um código único que facilita auditorias externas e transferências de setor sem necessidade de papéis.</p>
+            </div>
+        </div>
+
+        <div class="flex flex-col gap-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                <div class="img-card shadow-2xl shadow-black">
+                    <img src="Ativação.png" alt="Segurança">
+                </div>
+                <div class="img-card shadow-2xl shadow-black">
+                    <img src="Cadastro-novo usuario.png" alt="Usuários">
+                </div>
+            </div>
+            <div class="px-2">
+                <h2 class="text-2xl md:text-4xl font-black feature-title text-blue-500 mb-3">Acesso e Ativação</h2>
+                <p class="text-slate-400 text-base md:text-xl leading-relaxed">Sistema protegido por chaves de licença individuais. Cadastre múltiplos usuários administradores e garanta que apenas pessoas autorizadas manipulem os dados da instituição.</p>
             </div>
         </div>
 
     </section>
 
-    <section class="py-32 px-6">
-        <div class="max-w-4xl mx-auto glass p-12 rounded-[3rem] text-center border-blue-500/20">
-            <h2 class="text-4xl md:text-5xl font-black mb-6 italic uppercase leading-tight">PROFISSIONALIZE SUA <span class="text-blue-500">GESTÃO HOJE</span></h2>
-            <p class="text-slate-400 mb-10 text-lg font-medium">Instalação imediata. Sem mensalidades. Suporte direto Help Tec.</p>
-            <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="gradient-blue text-white px-12 py-6 rounded-3xl font-black text-2xl hover:scale-105 transition-all shadow-2xl shadow-blue-500/30 inline-block uppercase tracking-tight italic">QUERO MEU ACESSO AGORA</a>
+    <footer class="py-20 px-6 text-center">
+        <div class="max-w-2xl mx-auto glass p-10 rounded-[2rem] border-white/5">
+            <p class="text-slate-400 mb-8 font-medium">© 2026 HELP TEC SOLUÇÕES | LEANDRO SOUZA</p>
+            <div class="flex justify-center gap-8">
+                <a href="https://wa.me/5547988647259" class="text-slate-500 hover:text-white transition-colors text-2xl"><i class="fab fa-whatsapp"></i></a>
+                <a href="mailto:leandro.souza22oliveira@gmail.com" class="text-slate-500 hover:text-white transition-colors text-2xl"><i class="fas fa-envelope"></i></a>
+            </div>
         </div>
-    </section>
-
-    <footer class="py-12 border-t border-white/5 text-center text-slate-600 text-xs uppercase tracking-widest italic">
-        © 2026 HELP TEC SOLUÇÕES | LEANDRO SOUZA
     </footer>
 
 </body>
